@@ -1,7 +1,17 @@
-FROM nat-harbor.daocloud.io/library/openjdk:8u232-jre-debian
-ADD ./target/cloud_native_final-1.0-SNAPSHOT.jar /app/cloud_native_final-1.0-SNAPSHOT.jar
-ADD runboot.sh /app/
+FROM openjdk:8-jre-alpine
+
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
+
+ENV JAVA_OPTS ''
+
 WORKDIR /app
-RUN chmod a+x runboot.sh
-EXPOSE 8088
-CMD /app/runboot.sh
+ADD target/cloud_native_final-1.0-SNAPSHOT.jar .
+
+
+ENTRYPOINT ["sh", "-c", "set -e && java -XX:+PrintFlagsFinal \
+                                           -XX:+HeapDumpOnOutOfMemoryError \
+                                           -XX:HeapDumpPath=/heapdump/heapdump.hprof \
+                                           -XX:+UnlockExperimentalVMOptions \
+                                           -XX:+UseCGroupMemoryLimitForHeap \
+                                           $JAVA_OPTS -jar cloud_native_final-1.0-SNAPSHOT.jar"]
